--- a/index.html
+++ b/index.html
@@ -85,7 +85,6 @@
     <!--end of carousel in header-->
 </header>
 
-<div class="container">
     <div class="row">
         <div class="col-sm">
             <h2 class="text-about-us">About us</h2>
@@ -119,8 +118,8 @@
     <button type="button" class="button-learn-more">Learn more</button>
     <div class="row left-photo">
         <div class="col"></div>
-        <div class="col">
-            <span>Lorem Ipsum</span>
+        <div class="col text-left-photo">
+            <span>Lorem Ipsum</span><br/>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
 Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
@@ -130,8 +129,8 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
         </div>
     </div>
     <div class="row right-photo">
-        <div class="col">
-            <span>Dolor sit amet</span>
+        <div class="col text-right-photo">
+            <span>Dolor sit amet</span><br/>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
 Pellentesque hendrerit suscipit mi eu lobortis. Curabitur consectetur enim id elementum accumsan.
@@ -141,7 +140,39 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
         </div>
         <div class="col"></div>
     </div>
+    <div id="carouselTestimonias" class="carousel slide carousel-custom" data-ride="carousel">
+        <div class="carousel-caption carousel-caption-custom d-none d-md-block">
+            <h5 class="text-testimonials">Alecto lorem ipsum dolor sit amet, consectetur adipiscing elit. </h5>
+            <p class="p-testimonials">Adam Czajkowski, CEO&Founder at symu.co</p>
+        </div>
 
+        <ol class="carousel-indicators">
+            <li data-target="#carouselTestimonias" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselTestimonias" data-slide-to="1"></li>
+            <li data-target="#carouselTestimonias" data-slide-to="2"></li>
+            <li data-target="#carouselTestimonias" data-slide-to="3"></li>
+            <li data-target="#carouselTestimonias" data-slide-to="4"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/bg-testimonials.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/bg-testimonials.png" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/bg-testimonials.png" alt="Third slide">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselTestimonias" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselTestimonias" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
     <div class="row">
         <div class="col-sm">
             <h2 class="text-about-us">Our Services</h2>
@@ -166,20 +197,18 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
                 scelerisque.</p>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">1</div>
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">2</div>
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">3</div>
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">4</div>
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">5</div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">1</div>
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">2</div>
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">3</div>
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-1">4</div>
-        <div class="col-sm-12 col-md-5 col-lg-2 grey-box-2">5</div>
-    </div>
+<div class="team-box-wrapper">
+    <div class="team-box grey-box-1">1</div>
+    <div class="team-box grey-box-2">2</div>
+    <div class="team-box grey-box-1">3</div>
+    <div class="team-box grey-box-2">4</div>
+    <div class="team-box grey-box-1">5</div>
+    <div class="team-box grey-box-2">1</div>
+    <div class="team-box grey-box-1">2</div>
+    <div class="team-box grey-box-2">3</div>
+    <div class="team-box grey-box-1">4</div>
+    <div class="team-box grey-box-2">5</div>
+</div>
     <div class="row">
         <div class="col-sm">
             <h2 class="text-about-us">Pricing</h2>
@@ -188,62 +217,62 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
                 scelerisque.</p>
         </div>
     </div>
+    <!--<div class="row">-->
+        <!--<div class="col-sm-12 col-md-6 col-lg-3 box-shop">-->
+            <!--<span>29$</span>-->
+            <!--<div class="grey-line"></div>-->
+            <!--<p>Lorem ipsum license</p>-->
+            <!--<span>Lorem ipsum dolor sit amet-->
+                <!--consectetur adipiscing elit-->
+                <!--Ante sed interdum labortis-->
+                <!--Est nisi efficitur lactus</span>-->
+            <!--<div class="green-box-shop">-->
+                <!--<span>purchase</span>-->
+                <!--<span><img src="img/icon.png"></span>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-sm-12 col-md-6 col-lg-3 box-shop">-->
+            <!--<span>39$</span>-->
+            <!--<div class="grey-line"></div>-->
+            <!--<p>Lorem ipsum license</p>-->
+            <!--<span>Lorem ipsum dolor sit amet-->
+                <!--consectetur adipiscing elit-->
+                <!--Ante sed interdum labortis-->
+                <!--Est nisi efficitur lactus</span>-->
+            <!--<div class="green-box-shop">-->
+                <!--<span>purchase</span>-->
+                <!--<span><img src="img/icon.png"></span>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-sm-12 col-md-6 col-lg-3 box-shop">-->
+            <!--<span>49$</span>-->
+            <!--<div class="grey-line"></div>-->
+            <!--<p>Lorem ipsum license</p>-->
+            <!--<span>Lorem ipsum dolor sit amet-->
+                <!--consectetur adipiscing elit-->
+                <!--Ante sed interdum labortis-->
+                <!--Est nisi efficitur lactus</span>-->
+            <!--<div class="green-box-shop">-->
+                <!--<span>purchase</span>-->
+                <!--<span><img src="img/icon.png"></span>-->
+            <!--</div>-->
+        <!--</div>-->
+        <!--<div class="col-sm-12 col-md-6 col-lg-3 box-shop">-->
+            <!--<span>109$</span>-->
+            <!--<div class="grey-line"></div>-->
+            <!--<p>Lorem ipsum license</p>-->
+            <!--<span>Lorem ipsum dolor sit amet-->
+                <!--consectetur adipiscing elit-->
+                <!--Ante sed interdum labortis-->
+                <!--Est nisi efficitur lactus</span>-->
+            <!--<div class="green-box-shop">-->
+                <!--<span>purchase</span>-->
+                <!--<span><img src="img/icon.png"></span>-->
+            <!--</div>-->
+        <!--</div>-->
+    <!--</div>-->
     <div class="row">
-        <div class="col-sm-12 col-md-6 col-lg-3">
-            <span>29$</span>
-            <div class="grey-line"></div>
-            <p>Lorem ipsum license</p>
-            <span>Lorem ipsum dolor sit amet
-                consectetur adipiscing elit
-                Ante sed interdum labortis
-                Est nisi efficitur lactus</span>
-            <div class="green-box-shop">
-                <span>purchase</span>
-                <span><img src="img/icon.png"></span>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-            <span>29$</span>
-            <div class="grey-line"></div>
-            <p>Lorem ipsum license</p>
-            <span>Lorem ipsum dolor sit amet
-                consectetur adipiscing elit
-                Ante sed interdum labortis
-                Est nisi efficitur lactus</span>
-            <div class="green-box-shop">
-                <span>purchase</span>
-                <span><img src="img/icon.png"></span>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-            <span>29$</span>
-            <div class="grey-line"></div>
-            <p>Lorem ipsum license</p>
-            <span>Lorem ipsum dolor sit amet
-                consectetur adipiscing elit
-                Ante sed interdum labortis
-                Est nisi efficitur lactus</span>
-            <div class="green-box-shop">
-                <span>purchase</span>
-                <span><img src="img/icon.png"></span>
-            </div>
-        </div>
-        <div class="col-sm-12 col-md-6 col-lg-3">
-            <span>29$</span>
-            <div class="grey-line"></div>
-            <p>Lorem ipsum license</p>
-            <span>Lorem ipsum dolor sit amet
-                consectetur adipiscing elit
-                Ante sed interdum labortis
-                Est nisi efficitur lactus</span>
-            <div class="green-box-shop">
-                <span>purchase</span>
-                <span><img src="img/icon.png"></span>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
+        <div class="col-sm-12 col-md-12 col-lg-6 text-map">
             <span>Dolor sit amet</span>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
 Quisque elementum augue sed est porttitor, ac blandit nisl posuere.
@@ -252,7 +281,7 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
 <button type="button" class="button-learn-more">Learn more</button>
 </span>
         </div>
-        <div class="col"></div>
+        <div class="col-sm-12 col-md-12 col-lg-6 map-image"></div>
     </div>
     <div class="row">
         <div class="col try-psd">
@@ -262,7 +291,7 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
     </div>
     <div class="row">
         <div class="col">
-            <span class="footer-text">All Rights Reserved by Alecto</span>
+            <span class="footer-text"><img src="img/vector-smart-object.png">All Rights Reserved by Alecto</span>
             <ul class="li-footer">
                 <li><a href="#">home</a></li>
                 <li><a href="#">about</a></li>
@@ -274,7 +303,6 @@ Quisque metus purus, iaculis id tincidunt non, blandit quis sapien.
         </div>
     </div>
 
-</div>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
